--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,7 +28,7 @@
         <!-- Custom CSS overrides -->
         <link rel="stylesheet" href="{{ asset('css/app.css') }}">
         <link rel="stylesheet" href="{{ asset('css/loading.css') }}">
-        <link rel="stylesheet" href="{{ asset('css/toast_simple.css') }}">
+        <link rel="stylesheet" href="{{ asset('css/toast.css') }}">
     {% endblock %}
 </head>
 <body>
@@ -201,7 +201,7 @@
         <script src="{{ asset('assets/js/main.js') }}"></script>
 
         <!-- Toast Notification System (Simple - no Bootstrap dependency) -->
-        <script src="{{ asset('js/toast_simple.js') }}"></script>
+        <script src="{{ asset('js/toast.js') }}"></script>
 
         <!-- Loading Manager -->
         <script src="{{ asset('js/loading.js') }}"></script>
