--- a/public/css/client_appointment.css
+++ b/public/css/client_appointment.css
@@ -343,7 +343,7 @@
     }
 
     .date-arrow-btn-new {
-        width: 40px;
+        /*width: 40px;*/
         height: 40px;
         font-size: 16px;
     }
