--- a/templates/barber/profile.html.twig
+++ b/templates/barber/profile.html.twig
@@ -469,6 +469,7 @@
                         </div>
                         <div class="card-body p-4">
                             {{ form_start(form, {'attr': {'class': 'user-profile-form', 'novalidate': 'novalidate', 'id': 'profileForm'}}) }}
+                            {{ form_row(form._token) }}
 
                             <div class="row">
                                 <!-- Email -->
@@ -532,6 +533,52 @@
                                             <i class="fas fa-calendar-plus mr-2"></i>Член от
                                         </label>
                                         {{ form_widget(form.date_added, {'attr': {'class': 'form-control', 'readonly': true}}) }}
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Password Change Section -->
+                            <hr class="my-4">
+                            <h5 class="mb-3">
+                                <i class="fas fa-key text-warning mr-2"></i>Промяна на парола
+                            </h5>
+                            <div class="alert alert-info">
+                                <i class="fas fa-info-circle mr-2"></i>
+                                <strong>Важно:</strong> При попълване на полетата за парола, ще получите имейл с линк за потвърждение. Паролата ще бъде сменена след потвърждение.
+                            </div>
+
+                            <div class="row">
+                                <!-- Current Password -->
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label>
+                                            <i class="fas fa-lock text-muted mr-2"></i>Текуща парола
+                                        </label>
+                                        {{ form_widget(form.current_password, {'attr': {'class': 'form-control form-control-lg'}}) }}
+                                        {{ form_errors(form.current_password) }}
+                                    </div>
+                                </div>
+
+                                <!-- New Password -->
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>
+                                            <i class="fas fa-lock text-muted mr-2"></i>Нова парола
+                                        </label>
+                                        {{ form_widget(form.new_password, {'attr': {'class': 'form-control form-control-lg'}}) }}
+                                        {{ form_errors(form.new_password) }}
+                                        <small class="form-text text-muted">Минимум 6 символа</small>
+                                    </div>
+                                </div>
+
+                                <!-- Repeat New Password -->
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <label>
+                                            <i class="fas fa-lock text-muted mr-2"></i>Повтори новата парола
+                                        </label>
+                                        {{ form_widget(form.new_password_repeat, {'attr': {'class': 'form-control form-control-lg'}}) }}
+                                        {{ form_errors(form.new_password_repeat) }}
                                     </div>
                                 </div>
                             </div>
