--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -75,7 +75,7 @@
                                                     {% if is_granted('ROLE_ADMIN') %}
                                                         <li><a href="{{ path('admin', {id: app.user.id}) }}">Admin</a></li>
                                                     {% endif %}
-                                                    <li><a href="{{ path('profile_edit', {id: app.user.id}) }}">Hello, {{ app.user.nickName ?? app.user.firstName ?? app.user.email }}</a></li>
+                                                    <li><a href="{{ path('profile_edit', {id: app.user.id}) }}">Hello, {{ app.user.nickName ?? app.user.firstName ?? app.user.lastName ?? app.user.email }}</a></li>
                                                     <li><a href="{{ path('app_logout') }}">Logout</a></li>
                                                 {% else %}
                                                     <li><a href="{{ path('app_login') }}">Login</a></li>
