--- a/templates/client/appointment.html.twig
+++ b/templates/client/appointment.html.twig
@@ -22,7 +22,7 @@
     <!--? Appointment Booking Section Start -->
     <section class="appointment-booking-section section-padding30">
         <div class="container">
-            {% if user.firstName %}
+            {% if user.email %}
                 <div class="row justify-content-center">
                     <div class="col-xl-11 col-lg-12">
                         <!-- Section Title -->
@@ -86,7 +86,10 @@
                                                 <i class="fas fa-chevron-right"></i>
                                             </button>
                                         </div>
-                                        <div class="day-of-week-display" id="day_of_week">Сряда</div>
+                                        <div class="day-of-week-display" id="day_of_week">
+                                            {% set dayNames = {0: 'Неделя', 1: 'Понеделник', 2: 'Вторник', 3: 'Сряда', 4: 'Четвъртък', 5: 'Петък', 6: 'Събота'} %}
+                                            {{ dayNames[today|date('w')] }}
+                                        </div>
                                     </div>
                                 </div>
 
@@ -147,7 +150,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-    {% if user.firstName %}
+    {% if user.email %}
         <script src="{{ asset('js/client_appointment.js') }}"></script>
         <script>
             // Initialize appointment form with server data
