--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
     <title>{% block title %}Barber Shop - Book Your Appointment{% endblock %}</title>
     <meta name="description" content="Professional barber shop appointment booking system">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" href="{{ asset('favicon.png') }}">
+    <link rel="shortcut icon" type="image/x-icon" href="{{ asset('assets/favicon.png') }}">
 
     {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
